--- a/Viichan.html
+++ b/Viichan.html
@@ -323,15 +323,15 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/7651967" target="_blank">16일</a> - <a href="https://youtu.be/r3dri1TkFx0" target="_blank">7시) 몸치들의 저스트 댄스 (피아노 , 면허 따 감상 , 면허가리(아빠 차 강탈) , 썸네일가리 , 8월 챤래뱅 플리 , 롤드컵 노래가리 , 고컬로이드 세구세구 , VRChat풀트뱅 , 저스트 댄스 , 노래뱅 4곡)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7679885" target="_blank">17일</a> - <a href="https://youtu.be/LLEk2E0DwVg" target="_blank">고멤가요제!!!! 김피탕화이팅!!!</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7696585" target="_blank">18일</a> - <a href="https://youtu.be/psqd0FKQ4GY" target="_blank">9시반) VRC 조공 선물(?)받기 (VRChat 상황극 조공 - 돚거상사 , VRChat 풀트뱅 , 그냥살아! 촬영맵 탐방 , 맵 조공 - VIICHAN STUDIO , 아바타 조공 - 마린룩,개나리챤,뉴체리,그래피티룩 , 미술관 , MMD월드)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7724268" target="_blank">20일</a> - <a href="https://youtu.be/Gf0gOlyj8us" target="_blank">VRC 풀트랑 싸우는 날</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7727888" target="_blank">21일(업로드x)</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">모닝챤~</a></ul> 
-       <ul><a href="https://cafe.naver.com/steamindiegame/7736096" target="_blank">21일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">수요일 두개재</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7767617" target="_blank">23일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">[7시] 팬덤전쟁 공듀들과 티타임 (•᷅ ʚ •᷄ )//</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7787674" target="_blank">24일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">마크 팬덤전쟁~!!! (･ω･)//</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7799293" target="_blank">25일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">오늘도 감사합니다~!!!!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7834367" target="_blank">27일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">6시) VRC 풀트뱅 ~!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7841502" target="_blank">28일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">많다! 할일! 짧다! 오늘!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7881037" target="_blank">30일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">우 나 핫걸의 VR챗 탐방쓰</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7724268" target="_blank">20일</a> - <a href="https://youtu.be/Gf0gOlyj8us" target="_blank">VRC 풀트랑 싸우는 날 (트루러버 썸네일 시선강탈 , 비챤 관련 고멤가요제 후기방송 클립 모음 , 그냥 살아 라이브 , VRChat 풀트뱅 , 맵탐방 - POP챌린지 맵,그냥살아 맵,Viichan STUDIO 맵 , 왁트세이버 , 감다뒤와 감다살 , 우리 노래 진짜 많다 , 노래뱅)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7727888" target="_blank">21일(업로드x)</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">모닝챤~ (노래뱅)</a></ul> 
+       <ul><a href="https://cafe.naver.com/steamindiegame/7736096" target="_blank">21일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">수요일 두개재 (유튜브 확장프로그램 써보기 , 설립자 정리 , 매니저 채팅 부검 , 고대챤 클립 , 스플래툰3 , 이상한 소리하지마 변태)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7767617" target="_blank">23일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">[7시] 팬덤전쟁 공듀들과 티타임 (•᷅ ʚ •᷄ )// (마린챤 저챗 등장 , 집으로 커피시켜서 5분안에 돌아오기 , 고멤가요제 김피탕&짬뽕 후기 둘러보기 , 그냥 살아! 녹음파일 공개 , 스타크래프트 , 팬덤전쟁 대비 6공주와 티타임 , 빼꼼챤 , 경멸챤 , 뱅종 노래뱅)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7787674" target="_blank">24일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">마크 팬덤전쟁~!!! (･ω･)// (부정형 안부인사 , Not for long 비하인드,가이드 , 이세돌 마인크래프트 합방 - 팬덤 전쟁 , 고멤 놀이터 - 비즈니스킴 클라스)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7799293" target="_blank">25일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">오늘도 감사합니다~!!!! (배경화면 바꿈 , 유튭 팬치였던 시절 , 팬게임 - 이세계 미해결 사건 파일 , 헨따이! 키모~ , 팬게임 - 갈통런 , 망령혼합대무도회 최초 공개 , 팬영상 - 이세돌 나이 순이 반대라면? , 두발 자전거 못타는 비챤 , 발로란트 , 100만포 - 뽀로로)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7834367" target="_blank">27일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">6시) VRC 풀트뱅 ~! (리와인드 1000만 , 고멤 놀이터 - 뢴한길 교수의 고멤되는 법 , 으아앙 언니 2절이 엄써! , VRChat 풀트뱅 , 디즈니 챤 , 마린룩 입고 냉면 맵 , 김피탕 맵 , Ready for love맵 , 돌아보니 이세돌 전에 접점이 있었던 멤버들)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7841502" target="_blank">28일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">많다! 할일! 짧다! 오늘! (릴파식 짧뱅? , 왁젤 노래뱅 같이보기 , 맵 제작자의 사진사 데뷔 , 버거님 사클 신곡 - Up! , 비챤 사클 노가리 , 방종곡 - True Lover , 폰서트)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7881037" target="_blank">30일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">우 나 핫걸의 VR챗 탐방쓰 (뉴 페이셜 , 맏언니의 표지왕 공지 돚거 , 썸네일 협상 방법 , VRChat 맵탐방 - 배그맵,해파리 수족관맵,그래피티 맵,즛토마요 뮤비 맵,기차 맵,별 맵,노숙 맵,대성당 맵,석양 맵에서 데이브레이크,초승달맵,석양 맵에서 라니행동(로드킬),예쁜 맵에서 역장님 , VRChat 풀트뱅 , 신의상 - FIRE AGAIN 챤 , 초승달 맵 디즈니 챤 , FIRE AGAIN 챤 페이셜 , 노래뱅)</a></ul>
      
     </ul>
 
