--- a/Viichan.html
+++ b/Viichan.html
@@ -143,16 +143,16 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/4377497" target="_blank">14일</a> - <a href="https://youtu.be/5T92gEnuEIk" target="_blank">왕짧뱅 (학교 쌘 언니들에 대한 고찰 , 미아된 썰 , 악몽&가위 눌린 썰 , 몰컴 노가리 , 게임 노가리)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4377497" target="_blank">15일</a> - <a href="https://youtu.be/9uoQ5L8mEvI" target="_blank">왕지각대장 죄송합니다!!!! (왁래뱅 감상 , 사장님과 불법 듀엣 , 천성의 약함 창법의 비밀 , 롤 시네마틱 감상 , 롤 로그인 화면 월드컵 , 롤 영상 노가리 , 리그 오브 레전드 , RE:WIND 비하인드 영상 2편 감상 , 쉬는시간에 잔 썰 , 냐아아앙 따라하는 형) </a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4400593" target="_blank">16일</a> - 오늘 태어났습니다!</ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4421943" target="_blank">18일</a> - 할 얘기가 많군요 ^-^</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4409947" target="_blank">19일</a> - 특훈이닷 ଘ(੭ˊ꒳ˋ)੭✧</a></ul>
-          <ul>21일</a> - 짧뱅입니닷!</a></ul>
-          <ul>22일</a> - 8시) 롤 자운리그</a></ul>
-          <ul>23일</a> - 진짜 왕짧뱅입니다</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4462966" target="_blank">24일</a> - 4시) 풀트뱅</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4479812" target="_blank">26일</a> - 3시) 뱀파이어 서바이벌</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4511234" target="_blank">29일</a> - 행복한 연휴 보내세요!</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4518148" target="_blank">30일</a> - 똥겜데이</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4530966" target="_blank">31일</a> - 행복한 월요일이당!</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4421943" target="_blank">18일</a> - <a href="https://youtu.be/QwzZBJ-0FDg" target="_blank">할 얘기가 많군요 ^-^ (뉴 아바타 공모전 관련 , 씹가리 , 겜가리 , 에이펙스 레전드 , 방종곡 - Beautiful World , 잔혹한 천사의 테제)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4409947" target="_blank">19일</a> - <a href="https://youtu.be/UAfD2IFYCfY" target="_blank">특훈이닷 ଘ(੭ˊ꒳ˋ)੭✧ (보컬 학원 썰 , 어릴때나 지금이나 같은 목소리 , 노래뱅 , 징버거 내 한마디면 끝이다(막내온탑) , 리그 오브 레전드 , 뉴챤 공모전 구경)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4473551" target="_blank">21일</a> - <a href="https://youtu.be/N1Y5V7k9-Qs" target="_blank">짧뱅입니닷! (2집 겨울봄 유출 반응 , 뉴챤 겐고지수님 글 확인 , 눈 오리 만들기 , 부모님과 싸우고 화해하는 법(벌잘딱) , 화나면 눈물이 , 나오는 타입 , 이세돌들 인상에 대해 , 겨울봄 1차 녹음 썰 , 리그 오브 레전드)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4473551" target="_blank">22일</a> - <a href="https://youtu.be/9c1qCGLfXtk" target="_blank">8시) 롤 자운리그</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4473551" target="_blank">23일</a> - <a href="https://youtu.be/6kxf5iqRLZQ" target="_blank">진짜 왕짧뱅입니다 (안경챤 등장 , 애플 갤럭시 논쟁 , 로스트 아크)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4462966" target="_blank">24일</a> - <a href="https://youtu.be/E-1WuyJs0qw" target="_blank">4시) 풀트뱅 (사무엘님 사랑은 은하수 다방에서 MMD감상 후 '줘' , 언니들이랑 자는 만화 , 부모님 썰 , 칭찬이 고픈 챤 , 사춘기때 오히려 말을 잘 들었다 , 700티콘이 없는 이유 , 기타 치기 , VRChat 풀트뱅 , 챤스패치 , 르르땅 사원 , 세구야 나대지마 , 징버거 하우스 , 이쁜 맵 방문 , 극포상 받는 라니 , 챤동부 항상 고맙다 , 체리 썰 , 산책중 진상 썰 , 차가리)(</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4479812" target="_blank">26일</a> - <a href="https://youtu.be/fX1B2KRvi7g" target="_blank">3시) 뱀파이어 서바이벌 (애니어그램 검사 , 롯데월드 면접때 일코했다 , 뱀파이어 서바이벌 , 불법 노래뱅)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4511234" target="_blank">29일</a> - <a href="https://youtu.be/0BIrAqochL0" target="_blank">행복한 연휴 보내세요! (2연 휴뱅한 이유 , 츄즈미 썰 , 내가 얼마나 열씨미 했는데!!(뒷뱀서) , 2집 녹음 썰 , 녹음때 우웅거린거 걸림 , 제갈궁띵 , 츄즈미 리액션 보기 , 뢴챤 발언에 불타는 채팅창 , 시참 도전기 , 이세돌 지원 할 때 썰 , 방종곡 - 밤을 달리다 , 한숨)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4518148" target="_blank">30일</a> - <a href="https://youtu.be/06epIKhgKRE" target="_blank">똥겜데이 (뢴세구 , 소개팅 썰 , 서코 썰 , 회사 다닐때 썰 , DayBreak Frontline커버에 왁굳님 포상 댓글 , 난 어쩔 수 없는 침팬치인가봐 , 이세돌 커버 비하인드 썰 , 똥겜 - Levitation Simulator , 팬게임 - 토토 , 뱀파이어 서바이벌 , 오늘의 교훈 - 도박은 함부로 하지 말자 / 이후 왁굳님 외국인 팬미팅 뒷풀이 출연)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4530966" target="_blank">31일</a> - <a href="https://youtu.be/vUsjMBxGyJc" target="_blank">행복한 월요일이당! (외국인 팬미팅 뒷풀이 참가 썰 , 새해 인사 영상 썰 , 자유로운 새가 되고 싶었지만 세상이 억까했다 , 노래가리 , 보카로,우타이테,애니OST 등 top 100 감상 , 비챤 노래 월드컵 , 이모 10덕이었어? 아무래도 그렇지? , 튤립 유입 아이네 , 지인의 팬이었던 아이네 , 급식 창법 , 5 : 50 소개팅 신청 영상 관람)</a></ul>
       </ul>
 
       <p>　</p>
@@ -426,7 +426,7 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/8790372" target="_blank">06일</a> - </a href="" target="_blank">이세돌 팬게임</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8811824" target="_blank">08일</a> - </a href="" target="_blank">챤챗내 - 루머 유튭 뮤직 억까 해결!</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8823826" target="_blank">09일</a> - </a href="" target="_blank">5시) 풀트~~~~</a></ul>
-       <ul></a href="" target="_blank">10일</a> - </a href="" target="_blank">6시) 연말 282 트리 만들기~</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8834600" target="_blank">10일</a> - </a href="" target="_blank">6시) 연말 282 트리 만들기~</a></ul>
 
       
        </ul>
