--- a/Viichan.html
+++ b/Viichan.html
@@ -372,24 +372,24 @@
 
 
     <ul>10월 - <a href="https://cafe.naver.com/steamindiegame/8298478" target="_blank">月刊 ゔぃちゃん 10月号</a>(다시보기 내려가는대로 업데이트 될 예정)
-       <ul><a href="https://cafe.naver.com/steamindiegame/7892951" target="_blank">01일</a> - </a href="" target="_blank">오늘부터 1일입니다 (10월)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7906788" target="_blank">02일</a> - </a href="" target="_blank">7시) 도전! 라니벨 애니메이션 편</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7947507" target="_blank">05일</a> - </a href="" target="_blank">5시) 오버워치 찍먹</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7971547" target="_blank">07일</a> - </a href="" target="_blank">6시) 비챤과 이심전심 (토토데이)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7998559" target="_blank">09일</a> - </a href="" target="_blank">한글날 기념 한글 사용하면서 오버워치2 (6시 발음센세)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7892951" target="_blank">01일</a> - <a href="https://youtu.be/FmLZTy_uVLo" target="_blank">오늘부터 1일입니다 (10월)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7906788" target="_blank">02일</a> - <a href="https://youtu.be/19dnWVX2Now" target="_blank">7시) 도전! 라니벨 애니메이션 편</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7947507" target="_blank">05일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/DRxQWOWlR" target="_blank">5시) 오버워치 찍먹★</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7971547" target="_blank">07일</a> - <a href="https://youtu.be/iofJ12QB_Kw" target="_blank">6시) 비챤과 이심전심 (토토데이)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7998559" target="_blank">09일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/lk7BiVoWt" target="_blank">한글날 기념 한글 사용하면서 오버워치2 (6시 발음센세)★</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8011507" target="_blank">11일</a> - </a href="" target="_blank">새벽 채팅</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8035252" target="_blank">12일</a> - </a href="" target="_blank">잔잔쓰</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8035252" target="_blank">12일</a> - <a href="https://youtu.be/S6UyNbr9tIw" target="_blank">잔잔쓰</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8058373" target="_blank">14일</a> - </a href="" target="_blank">일하기 전에 짧게 채팅</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8075769" target="_blank">15일</a> - </a href="" target="_blank">5시반) VRC 풀트 이세돌 숙소 맵탐방</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8092740" target="_blank">16일</a> - </a href="" target="_blank">8시) 오버워치2 x 이세계아이돌 (광고)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8103073" target="_blank">17일</a> - </a href="" target="_blank">일 하러 가기 전 옵치 한 판</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8127646" target="_blank">19일</a> - </a href="" target="_blank">오랜만임니다앙</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8150728" target="_blank">21일</a> - </a href="" target="_blank">금~~~요일~~~좋아~~~</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8164801" target="_blank">22일</a> - </a href="" target="_blank">7시) 오버워치2 언어능력자</a></ul> 
-       <ul><a href="https://cafe.naver.com/steamindiegame/8177362" target="_blank">23일</a> - </a href="" target="_blank">5시반) 풀트 테스트</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8205048" target="_blank">25일</a> - </a href="" target="_blank">8시 반) 왁타버스 마인크래프트 합방</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8215307" target="_blank">26일</a> - </a href="" target="_blank">5시반) 오버워치2 우당탕탕 정켄슈타인</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8248665" target="_blank">28일</a> - </a href="" target="_blank">잔잔짧뱅스입니다 (약간 ASMR...)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8075769" target="_blank">15일</a> - <a href="https://youtu.be/TkTSrv247N0" target="_blank">5시반) VRC 풀트 이세돌 숙소 맵탐방</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8092740" target="_blank">16일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/NwjmRDajC" target="_blank">8시) 오버워치2 x 이세계아이돌 (광고)★</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8103073" target="_blank">17일</a> - </a href="" target="_blank">채팅뱅 - 일 하러 가기 전 옵치 한 판</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8127646" target="_blank">19일</a> - <a href="https://youtu.be/pXhnw4Jugp4" target="_blank">오랜만임니다앙</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8150728" target="_blank">21일</a> - <a href="https://youtu.be/qf8_KwJ91is" target="_blank">금~~~요일~~~좋아~~~</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8164801" target="_blank">22일</a> - <a href="https://youtu.be/LXse_TzFUtg" target="_blank">7시) 오버워치2 언어능력자</a></ul> 
+       <ul><a href="https://cafe.naver.com/steamindiegame/8177362" target="_blank">23일</a> - <a href="https://youtu.be/OS4_5hLLPq8" target="_blank">5시반) 풀트 테스트</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8205048" target="_blank">25일</a> - <a href="https://youtu.be/C1Yf4qmgmDU" target="_blank">8시 반) 왁타버스 마인크래프트 합방</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8215307" target="_blank">26일</a> - <a href="https://youtu.be/X7VPcGgkwsM" target="_blank">5시반) 오버워치2 우당탕탕 정켄슈타인</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8248665" target="_blank">28일</a> - <a href="https://youtu.be/O6WMXZUw0Lg" target="_blank">잔잔짧뱅스입니다 (약간 ASMR...)</a></ul>
        
     </ul>
        
