--- a/Viichan.html
+++ b/Viichan.html
@@ -426,7 +426,7 @@
 <p><br></p>
 
 
-    <ul>12월 - </a href="" target="_blank">月刊 ゔぃちゃん 12月号</a>
+    <ul>12월 - <a href="https://cafe.naver.com/steamindiegame/9178683" target="_blank">月刊 ゔぃちゃん 12月号</a>(다시보기 내려가는대로 업데이트 될 예정)
        <ul><a href="https://cafe.naver.com/steamindiegame/8739297" target="_blank">02일</a> - <a href="https://youtu.be/X52pGaQd4oE" target="_blank">카타르 월드컵 축구 3차전 같이보기◆ (푸라닭 먹방 , 뿌까챤 등장 , 얼빡챤 , 고세구 - 긍지높은 아이돌 감상 , 아이네 - 고멤가요제 MASHUP 감상 , 고멤 놀이터 - 소년점프 커버 , 월드컵 포르투갈전 응원 , WHAT THE HELL 리믹스 , 사랑을 전하고 싶다던가 FMV , 노래뱅 , ASMR(?))</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8763598" target="_blank">04일</a> - <a href="https://youtu.be/CvFWViaFw8I" target="_blank">여어- 핫걸 등장입니다◆ (신규 헤어스타일 - 하이번 , 안경 장착 , 너드챤 완성 , 눈밑점 , 꼬맨틀 , 천양이 생각하는 비챤의 섹시 , 왁타뮤직 , 긍지높은 아이돌 감상 및 해석 , 데이브레이크 커버 할 때 까지의 노력 , 커버곡 노가리 , 녹음 노가리 , 귀요미송 , Track 9 , 마인크래프트 - 아파리 마을 준비 , 팬영상 - 뭐어?!?!?!,릴 파 바 보 ! , 미..미..미..!! , 짬뽕 사투리)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8790372" target="_blank">06일</a> - <a href="https://youtu.be/Yz4WFhUDTsg" target="_blank">이세돌 팬게임◆ (꼬맨틀 , 오버워치2 , 이세계 아이돌 팬게임 - ISOLATE DIABOLOS , 비챤,아이네 괴이 엔딩 , 주르르 노멀엔딩 , 비챤 굿엔딩)</a></ul>
@@ -436,9 +436,30 @@
        <ul>/<a href="https://cafe.naver.com/steamindiegame/8861280" target="_blank">12일</a> - <a href="https://youtu.be/t9MX2UOxUhM" target="_blank">7시) 슈퍼피플 2◆ (? 왓더헬 , 클리퍼들 완전 라니다 , 새벽 4시에 소집 , 이세돌 합방 (주르르,고세구,비챤) - 슈퍼피플 2 , C급병사 , 꼬맨틀 , 릴단콘 Dream Again 티저사이트 방문 , 꼬들 , 무의식속 동물찾기 , 고세구 TOUR티저 사이트 , 내가 너무 섹시해 오또케 오또케 앙~ , 마지막 재회 오케스트라 ver , 아빠 차 산다! ...근데 그거 내가 사는건 아니지? , 늑대챤 내가 판 무덤이었구나? , B챤 만화 10화)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8877422" target="_blank">13일</a> - <a href="https://youtu.be/a6Y15aD2rt8" target="_blank">섹시등장◆ (??방제 무엇? 합방인가요? , 면허가리, 눈싸움, 겨울옷, 먹가리, 아버지 썰, 꿈, 그냥살아, J챤, 회의 썰, 3집 녹음썰</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8890717" target="_blank">14일</a> - <a href="https://youtu.be/YyHjbWzIZBI" target="_blank">커버곡 티저 공개~~~◆ (커버곡 티저 공개 , 이세돌 웹툰 설정화 & 콘티 , 해골아가 마법소녀 OST 감상 , 캐롤 노가리 , '출근 하시나봐요?' "퇴근인데요?" , 꼬맨틀 , 세키로 : SHADOWS DIE TWICE)</a></ul>
-       <ul><a href="" target="_blank">16일</a> - </a href="https://youtu.be/a6Y15aD2rt8" target="_blank">8시) 뉴 커버곡 공개◆</a></ul>
-
+       <ul><a href="https://cafe.naver.com/steamindiegame/8915050" target="_blank">16일</a> - <a href="https://youtu.be/yySHgq8dyUw" target="_blank">8시) 뉴 커버곡 공개◆</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8933242" target="_blank">17일</a> - <a href="https://youtu.be/jZ39K8B1Vwg" target="_blank">8시) 크라임 왁 외전!◆</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8961978" target="_blank">18일</a> - </a href="" target="_blank">챤챗내 - 본가에 올라가는 길에 갑자기 열린 챤톡</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8982596" target="_blank">20일</a> - <a href="https://youtu.be/C8fZRRuXBII" target="_blank">잔잔쓰◆</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8996611" target="_blank">21일</a> - <a href="https://youtu.be/KFTpeZTVZVo" target="_blank">눈이와요 '0'◆</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/9053844" target="_blank">24일</a> - </a href="" target="_blank">챤챗내 - 릴파 콘서트 끝나고 내일 늦뱅임을 알리러 오신 챤님</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/9067716" target="_blank">24일</a> - <a href="https://youtu.be/YXcYGoMlPBg" target="_blank">크리스마스이브다!!!!!!!!!!!!!◆</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/9082061" target="_blank">25일</a> - <a href="https://youtu.be/Wkjvx6EJrSI" target="_blank">메리 크리스마스~!!!◆</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/9131690" target="_blank">29일</a> - <a href="https://youtu.be/y872ya2fGuE" target="_blank">짧뱅쓰임다!!◆</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/9149348" target="_blank">30일</a> - <a href="https://youtu.be/zH49DCPkHSc" target="_blank">아 비챤님제발~~~~~~~~~~~~~~~◆</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/9172353" target="_blank">31일</a> - <a href="https://youtu.be/zH49DCPkHSc" target="_blank">쿨핫섹시큐티등장◆</a></ul>
       
+       </ul>
+
+
+<p><br></p>
+
+<p>　</p>
+      <div>2023년</div>
+    <ul>01월 - </a href="" target="_blank">月刊 ゔぃちゃん 01月号</a>(다시보기 내려가는대로 업데이트 될 예정)
+       <ul><a href="https://cafe.naver.com/steamindiegame/9185153" target="_blank">01일</a> - <a href="https://youtu.be/Rn60LGuT6W0" target="_blank">신년 짧뱅입니다!!!◆</a></ul>
+
+
+
        </ul>
 </span>
     </ul>
