--- a/Viichan.html
+++ b/Viichan.html
@@ -426,7 +426,7 @@
 <p><br></p>
 
 
-    <ul>12월 - <a href="https://cafe.naver.com/steamindiegame/9178683" target="_blank">月刊 ゔぃちゃん 12月号</a>(다시보기 내려가는대로 업데이트 될 예정)
+    <ul>12월 - <a href="https://cafe.naver.com/steamindiegame/9178683" target="_blank">月刊 ゔぃちゃん 12月号</a>
        <ul><a href="https://cafe.naver.com/steamindiegame/8739297" target="_blank">02일</a> - <a href="https://youtu.be/X52pGaQd4oE" target="_blank">카타르 월드컵 축구 3차전 같이보기◆ (푸라닭 먹방 , 뿌까챤 등장 , 얼빡챤 , 고세구 - 긍지높은 아이돌 감상 , 아이네 - 고멤가요제 MASHUP 감상 , 고멤 놀이터 - 소년점프 커버 , 월드컵 포르투갈전 응원 , WHAT THE HELL 리믹스 , 사랑을 전하고 싶다던가 FMV , 노래뱅 , ASMR(?))</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8763598" target="_blank">04일</a> - <a href="https://youtu.be/CvFWViaFw8I" target="_blank">여어- 핫걸 등장입니다◆ (신규 헤어스타일 - 하이번 , 안경 장착 , 너드챤 완성 , 눈밑점 , 꼬맨틀 , 천양이 생각하는 비챤의 섹시 , 왁타뮤직 , 긍지높은 아이돌 감상 및 해석 , 데이브레이크 커버 할 때 까지의 노력 , 커버곡 노가리 , 녹음 노가리 , 귀요미송 , Track 9 , 마인크래프트 - 아파리 마을 준비 , 팬영상 - 뭐어?!?!?!,릴 파 바 보 ! , 미..미..미..!! , 짬뽕 사투리)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8790372" target="_blank">06일</a> - <a href="https://youtu.be/Yz4WFhUDTsg" target="_blank">이세돌 팬게임◆ (꼬맨틀 , 오버워치2 , 이세계 아이돌 팬게임 - ISOLATE DIABOLOS , 비챤,아이네 괴이 엔딩 , 주르르 노멀엔딩 , 비챤 굿엔딩)</a></ul>
@@ -455,7 +455,7 @@
 
 <p>　</p>
       <div>2023년</div>
-    <ul>01월 - </a href="" target="_blank">月刊 ゔぃちゃん 01月号</a>(다시보기 내려가는대로 업데이트 될 예정)
+    <ul>01월 - </a href="" target="_blank">月刊 ゔぃちゃん 01月号</a>
        <ul><a href="https://cafe.naver.com/steamindiegame/9185153" target="_blank">01일</a> - <a href="https://youtu.be/Rn60LGuT6W0" target="_blank">신년 짧뱅입니다!!!◆</a></ul>
 
 
