--- a/Viichan.html
+++ b/Viichan.html
@@ -168,7 +168,7 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/4581045" target="_blank">05일</a> - <a href="https://youtu.be/LNK4HJLS4O8" target="_blank">해피토요일 >//<~!◐ (고멤 놀이터 - Dream , 비챤 고퀄 팬아트(넷마블 그분) , 섹시는 숨소리 , 발로 본체 꺼서 급뱅종(이후 영상 미확보))</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4591329" target="_blank">06일</a> - <a href="https://youtu.be/ZE2T3d8U9GE" target="_blank">3시 반) VR 풀트◐ (전반부 노래방 영상 유실 후반 VR챗 부터 영상 , VRChat풀트뱅 , 신의상(봄날 옷) 공개 , 루석바 이동 , 노래방 맵 달라고 땡깡챤 , 노래방 맵 이동 , 릴파 스튜디오 , 배팅센터 이동 , 카페 맵 이동 , 거울로 놀기 , 시험볼 때 썰 , 1절 행동 아이네를 본 챤 , 뱅종곡 - 굿바이 선언)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4602160" target="_blank">07일</a> - <a href="https://youtu.be/-b1INDkiLeg" target="_blank">짧뱅스 (ㄱㅇㅇ에 세뇌당하는 중 , 호스팅가서 도배 그만~ , 체리가 냄새 맡으면 나도 주워서 냄새 맡는데 , 폰케이스 노가리(어프어프) , 어푸어푸로 알아듣고 검색했다가 연어 구매한 라니 , 취나물(시나몬롤) 좋아해요 , 인형뽑기 좀 치는 챠니 , 오락실가리 , 고양이 카페 간 썰 , 나 미워?! 사실 밉진 않아 , 챤님 방에서 놀건데 챤님도 오실래요? , 방종 직전 작전회의 하는 라니들 , 뱅종곡 - 신호등)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4613353" target="_blank">08일</a> - 지코쿠지코쿠~~ ;-;</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4613353" target="_blank">08일</a> - <a href="https://youtu.be/IBBGCGr_5ZQ" target="_blank">지코쿠지코쿠~~ ;-; (새벽에 언니들이랑 발로한 썰 , FPS + 게임노가리 , 사적 비챤 , 리뷰고멤 데이브레이크 리뷰 , 소프트 큐티챤 , 릴파 바보! , 발로란트 , 2집 내 머리 속에서 나가!! , 노래뱅)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4626604" target="_blank">09일</a> - 특훈의 날</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4649559" target="_blank">11일</a> - 4시 반) VR챗 연기 배우기</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4661170" target="_blank">12일</a> - 4시반) VR 풀트</a></ul>
