--- a/Viichan.html
+++ b/Viichan.html
@@ -436,10 +436,10 @@
        <ul>/<a href="https://cafe.naver.com/steamindiegame/8861280" target="_blank">12일</a> - <a href="https://youtu.be/t9MX2UOxUhM" target="_blank">7시) 슈퍼피플 2◆ (? 왓더헬 , 클리퍼들 완전 라니다 , 새벽 4시에 소집 , 이세돌 합방 (주르르,고세구,비챤) - 슈퍼피플 2 , C급병사 , 꼬맨틀 , 릴단콘 Dream Again 티저사이트 방문 , 꼬들 , 무의식속 동물찾기 , 고세구 TOUR티저 사이트 , 내가 너무 섹시해 오또케 오또케 앙~ , 마지막 재회 오케스트라 ver , 아빠 차 산다! ...근데 그거 내가 사는건 아니지? , 늑대챤 내가 판 무덤이었구나? , B챤 만화 10화)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8877422" target="_blank">13일</a> - <a href="https://youtu.be/a6Y15aD2rt8" target="_blank">섹시등장◆ (??방제 무엇? 합방인가요? , 면허가리, 눈싸움, 겨울옷, 먹가리, 아버지 썰, 꿈, 그냥살아, J챤, 회의 썰, 3집 녹음썰</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8890717" target="_blank">14일</a> - <a href="https://youtu.be/YyHjbWzIZBI" target="_blank">커버곡 티저 공개~~~◆ (커버곡 티저 공개 , 이세돌 웹툰 설정화 & 콘티 , 해골아가 마법소녀 OST 감상 , 캐롤 노가리 , '출근 하시나봐요?' "퇴근인데요?" , 꼬맨틀 , 세키로 : SHADOWS DIE TWICE)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8915050" target="_blank">16일</a> - <a href="https://youtu.be/yySHgq8dyUw" target="_blank">8시) 뉴 커버곡 공개◆</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8933242" target="_blank">17일</a> - <a href="https://youtu.be/jZ39K8B1Vwg" target="_blank">8시) 크라임 왁 외전!◆</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8915050" target="_blank">16일</a> - <a href="https://youtu.be/yySHgq8dyUw" target="_blank">8시) 뉴 커버곡 공개◆ (커버곡 공개하는 날 , 작업자분들에게 무례한 말은 자중해주세요 , '섹시해서 죄송해요' "아니 사과하지 마세요" , Baby I need you 커버곡 최초 공개 , 작업 비하인드 , VRChat뮤비에는 낭만이 있다 , 신곡 줄여서 '사스가' , 고멤 놀이터 - 실루엣 , 사스가 원본 음원 공개 , 신곡 듣고 우는 형(안움)) </a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8933242" target="_blank">17일</a> - <a href="https://youtu.be/jZ39K8B1Vwg" target="_blank">8시) 크라임 왁 외전!◆ (신곡 좋아해주셔서 감사합니다 , 사전 점검을 위한 VRChat 접속 , 개같이 아바타 유출 , '큐트인정하면 잊어드리겠습니다' "전 섹시인데요?" '혀어엉!' , 내가 잘못했어 이렇게 빌게(싹싹챤) , 사스가 추가 후기 , 1주년 축하MV 꿈의 형태 , 왁타뮤직 , 신규 VRM - 비란(수지챤) , 이세돌 합방 - 크라임 왁 : 외전 , 크라임왁 제작 후기 감상 , 고멤 놀이터 - 멜트 , VRChat 빵떡돌 , 꼬맨틀) </a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8961978" target="_blank">18일</a> - </a href="" target="_blank">챤챗내 - 본가에 올라가는 길에 갑자기 열린 챤톡</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8982596" target="_blank">20일</a> - <a href="https://youtu.be/C8fZRRuXBII" target="_blank">잔잔쓰◆</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8982596" target="_blank">20일</a> - <a href="https://youtu.be/C8fZRRuXBII" target="_blank">잔잔쓰◆ (아바타 담당자분의 사스가 후기 , TOUR 콘서트 게스트 참가한 썰 , 신규 VRM - TOUR 드레스 챤 , 느그세게돌아이(실사 리와인드) , 실전압축 모기챤 쇼츠 , 낚시해서 바로 먹으면 회덮밥이게? , 두부 시렁 , 두부야 산책가자! , 아빠가 다리 떨지 말라해써요 , 체리에게 서운챤 , "히키오빠 너무 멋있더라" '타닥 타닥..' , HAKU X 이세돌 It's Beginning To Look A Lot Like Christmas , 갑자기 사스가 비하인드 풀기 , 부모님 방문 , 엄마 고마웡 , TOUR 콘서트 후기 작성 , 신규 VRM - 빵떡챤 , 안마의자 멀미) </a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8996611" target="_blank">21일</a> - <a href="https://youtu.be/KFTpeZTVZVo" target="_blank">눈이와요 '0'◆</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/9053844" target="_blank">24일</a> - </a href="" target="_blank">챤챗내 - 릴파 콘서트 끝나고 내일 늦뱅임을 알리러 오신 챤님</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/9067716" target="_blank">24일</a> - <a href="https://youtu.be/YXcYGoMlPBg" target="_blank">크리스마스이브다!!!!!!!!!!!!!◆</a></ul>
@@ -457,7 +457,7 @@
       <div>2023년</div>
     <ul>01월 - </a href="" target="_blank">月刊 ゔぃちゃん 01月号</a>
        <ul><a href="https://cafe.naver.com/steamindiegame/9185153" target="_blank">01일</a> - <a href="https://youtu.be/Rn60LGuT6W0" target="_blank">신년 짧뱅입니다!!!◆</a></ul>
-
+       <ul><a href="https://cafe.naver.com/steamindiegame/9185153" target="_blank">04일</a> - <a href="https://youtu.be/Rn60LGuT6W0" target="_blank">하이하이!!!!!!!!!!!!!◆</a></ul>
 
 
        </ul>
