--- a/Viichan.html
+++ b/Viichan.html
@@ -399,24 +399,24 @@
 <p><br></p>
 
 
-    <ul>11월 - <a href="https://cafe.naver.com/steamindiegame/8713631" target="_blank">月刊 ゔぃちゃん 11月号</a>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8308237" target="_blank">01일</a> - </a href="" target="_blank">MBTI가 바뀌었다</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8321615" target="_blank">02일</a> - </a href="" target="_blank">8시) 왁타버스 발로란트 가을합방</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8350157" target="_blank">04일</a> - </a href="" target="_blank">스피드하고 빠르지만 짧은 방송</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8403433" target="_blank">08일</a> - </a href="" target="_blank">히사시부리입니다!!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8418413" target="_blank">09일</a> - </a href="" target="_blank">일식장인의 오마카세</a></ul>
+    <ul>11월 - <a href="https://cafe.naver.com/steamindiegame/8713631" target="_blank">月刊 ゔぃちゃん 11月号</a>(다시보기 내려가는대로 업데이트 될 예정)
+       <ul><a href="https://cafe.naver.com/steamindiegame/8308237" target="_blank">01일</a> - <a href="https://youtu.be/ciympjWQHcw" target="_blank">MBTI가 바뀌었다</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8321615" target="_blank">02일</a> - <a href="https://youtu.be/QmpRTelP_dM" target="_blank">8시) 왁타버스 발로란트 가을합방</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8350157" target="_blank">04일</a> - <a href="https://youtu.be/SKT6hl6lkRQ" target="_blank">스피드하고 빠르지만 짧은 방송</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8403433" target="_blank">08일</a> - <a href="https://youtu.be/07dMGjsWymo" target="_blank">히사시부리입니다!!</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8418413" target="_blank">09일</a> - <a href="https://youtu.be/TBx1s52dUjg" target="_blank">일식장인의 오마카세</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8449891" target="_blank">11일</a> - </a href="" target="_blank">빼빼로데이당~~~</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8461449" target="_blank">12일</a> - </a href="" target="_blank">6시) 오버워치2 팟지조작단</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8461449" target="_blank">12일</a> - </a href="" target="_blank">6시 반) 오버워치2 팟지조작단</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8475165" target="_blank">13일</a> - </a href="" target="_blank">실천압축초짧뱅</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8507456" target="_blank">15일</a> - </a href="" target="_blank">화요일입니다!!!!!!!!!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8519765" target="_blank">16일</a> - </a href="" target="_blank">수요잎</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8547617" target="_blank">18일</a> - </a href="" target="_blank">포켓몬스터 바이올렛</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8558310" target="_blank">19일</a> - </a href="" target="_blank">서브 채널 만들기</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8575163" target="_blank">20일</a> - </a href="" target="_blank">마크녹슨검의 왁타버스 마인크래프트 합방</a></ul> 
-       <ul><a href="https://cafe.naver.com/steamindiegame/8600282" target="_blank">22일</a> - </a href="" target="_blank">하이하이</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8639674" target="_blank">25일</a> - </a href="" target="_blank">챤하챤하챤하</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/8657210" target="_blank">26일</a> - </a href="" target="_blank">핫걸등장</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8475165" target="_blank">13일</a> - <a href="https://youtu.be/ptFIi8Wsiak" target="_blank">실천압축초짧뱅</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8507456" target="_blank">15일</a> - <a href="https://youtu.be/GP_-0B9rtCk" target="_blank">화요일입니다!!!!!!!!!</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8519765" target="_blank">16일</a> - <a href="https://youtu.be/hERYdie9BMI" target="_blank">수요잎</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8547617" target="_blank">18일</a> - <a href="https://youtu.be/l4g4iO65Mos" target="_blank">포켓몬스터 바이올렛</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8558310" target="_blank">19일</a> - <a href="https://youtu.be/RbNvXtV6Ky0" target="_blank">서브 채널 만들기</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8575163" target="_blank">20일</a> - <a href="https://youtu.be/cUYmkVPR9hU" target="_blank">마크녹슨검의 왁타버스 마인크래프트 합방</a></ul> 
+       <ul><a href="https://cafe.naver.com/steamindiegame/8600282" target="_blank">22일</a> - <a href="https://youtu.be/BYedade1kX8" target="_blank">하이하이</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8639674" target="_blank">25일</a> - <a href="https://youtu.be/UxehoWGYHa0" target="_blank">챤하챤하챤하</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/8657210" target="_blank">26일</a> - <a href="" target="_blank">핫걸등장</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8693384" target="_blank">29일</a> - <a href="https://youtu.be/UZl6aKOjCV4" target="_blank">화요일의 핫걸◆ (3차 오디션 리와인드 부를때 이야기 , 비챤으로 보는 붕당 정치의 이해 , 감람스톤 1주년 , 슈퍼 스매시브라더스 얼티밋 , 후열 노래뱅 - 사계,NUDE,After Like,그대라는 시,ELEVEN)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8706003" target="_blank">30일</a> - <a href="https://youtu.be/tAG5g7NlKDs" target="_blank">해피수요일~~~◆ (고멤 놀이터 - 나비 , 다름다름 테스트 , 마우스 휠 검지 or 중지 논쟁 , 여행갈때 J특 , 밥 잘 챙겨먹어서 섭섭한 챤머니 , 애교는 어머니를 닮았다 , 아버지랑 싸울때 레퍼토리 , 리그 오브 레전드)  </a></ul>
 
