--- a/Viichan.html
+++ b/Viichan.html
@@ -458,7 +458,7 @@
     <ul>01월 - </a href="" target="_blank">月刊 ゔぃちゃん 01月号</a>
        <ul><a href="https://cafe.naver.com/steamindiegame/9185153" target="_blank">01일</a> - <a href="https://youtu.be/Rn60LGuT6W0" target="_blank">신년 짧뱅입니다!!!◆</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/9185153" target="_blank">04일</a> - <a href="https://youtu.be/Rn60LGuT6W0" target="_blank">하이하이!!!!!!!!!!!!!◆</a></ul>
-
+       <ul><a href="https://cafe.naver.com/steamindiegame/9246562" target="_blank">06일</a> - <a href="https://youtu.be/lP3lVbqBTpg" target="_blank">쿨한 금요일◆</a></ul>
 
        </ul>
 </span>
