--- a/Viichan.html
+++ b/Viichan.html
@@ -457,8 +457,11 @@
       <div>2023년</div>
     <ul>01월 - </a href="" target="_blank">月刊 ゔぃちゃん 01月号</a>
        <ul><a href="https://cafe.naver.com/steamindiegame/9185153" target="_blank">01일</a> - <a href="https://youtu.be/Rn60LGuT6W0" target="_blank">신년 짧뱅입니다!!!◆</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/9185153" target="_blank">04일</a> - <a href="https://youtu.be/Rn60LGuT6W0" target="_blank">하이하이!!!!!!!!!!!!!◆</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/9222849" target="_blank">04일</a> - <a href="https://youtu.be/Rn60LGuT6W0" target="_blank">하이하이!!!!!!!!!!!!!◆</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/9246562" target="_blank">06일</a> - <a href="https://youtu.be/lP3lVbqBTpg" target="_blank">쿨한 금요일◆</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/9261087" target="_blank">07일</a> - </a href="https://youtu.be/lP3lVbqBTpg" target="_blank">asmr 도전~◆</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/9270268" target="_blank">08일</a> - </a href="https://youtu.be/lP3lVbqBTpg" target="_blank"> 4시 반) 체인소맨 보기◆</a></ul>
+
 
        </ul>
 </span>
