--- a/Viichan.html
+++ b/Viichan.html
@@ -169,19 +169,19 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/4591329" target="_blank">06일</a> - <a href="https://youtu.be/ZE2T3d8U9GE" target="_blank">3시 반) VR 풀트◐ (전반부 노래방 영상 유실 후반 VR챗 부터 영상 , VRChat풀트뱅 , 신의상(봄날 옷) 공개 , 루석바 이동 , 노래방 맵 달라고 땡깡챤 , 노래방 맵 이동 , 릴파 스튜디오 , 배팅센터 이동 , 카페 맵 이동 , 거울로 놀기 , 시험볼 때 썰 , 1절 행동 아이네를 본 챤 , 뱅종곡 - 굿바이 선언)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4602160" target="_blank">07일</a> - <a href="https://youtu.be/-b1INDkiLeg" target="_blank">짧뱅스 (ㄱㅇㅇ에 세뇌당하는 중 , 호스팅가서 도배 그만~ , 체리가 냄새 맡으면 나도 주워서 냄새 맡는데 , 폰케이스 노가리(어프어프) , 어푸어푸로 알아듣고 검색했다가 연어 구매한 라니 , 취나물(시나몬롤) 좋아해요 , 인형뽑기 좀 치는 챠니 , 오락실가리 , 고양이 카페 간 썰 , 나 미워?! 사실 밉진 않아 , 챤님 방에서 놀건데 챤님도 오실래요? , 방종 직전 작전회의 하는 라니들 , 뱅종곡 - 신호등)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4613353" target="_blank">08일</a> - <a href="https://youtu.be/IBBGCGr_5ZQ" target="_blank">지코쿠지코쿠~~ ;-; (새벽에 언니들이랑 발로한 썰 , FPS + 게임노가리 , 사적 비챤 , 리뷰고멤 데이브레이크 리뷰 , 소프트 큐티챤 , 릴파 바보! , 발로란트 , 2집 내 머리 속에서 나가!! , 노래뱅)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4626604" target="_blank">09일</a> - 특훈의 날</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4649559" target="_blank">11일</a> - 4시 반) VR챗 연기 배우기</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4661170" target="_blank">12일</a> - 4시반) VR 풀트</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4677060" target="_blank">13일</a> - 이세돌 마크합방! 별주부전~</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4688796" target="_blank">14일</a> - <a href="https://youtu.be/JZyi2IRHxUE" target="_blank">초코먹는날~ (발로란트 , 발렌타인 VRC풀트 , 체리챤 , 노래뱅)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4721489" target="_blank">16일</a> - 병원에 다녀왔습니다 그런데...</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4785791" target="_blank">20일</a> - 행복한 일요일 ^//^</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4798375" target="_blank">21일</a> - 행복한 오후입니다!</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4815259" target="_blank">22일</a> - 7시) ER 인비테이셔널</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4831774" target="_blank">23일</a> - 애플 퀄리티</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4626604" target="_blank">09일</a> - <a href="https://youtu.be/uwgo_zt0ejw" target="_blank">특훈의 날◐ (구독 뱃지&도네 이펙트 리뉴얼 노가리 , 퍼스널 컬러 테스트 , 챠니 감기 걱정해주는 맏언니 , 발로란트 강의 영상 , 마인크래프트 특훈 , 발로란트 , 발래방 , 본체꺼서 급뱅종 , 이후 리방 영상 없음) </a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4649559" target="_blank">11일</a> - <a href="https://youtu.be/auPLxo9mS0Y" target="_blank">4시 반) VR챗 연기 배우기 (재채기 모음 영상 , VRChat 풀트뱅 , 연기수업 , 대본 - 왁미제라블,과속스캔들,멜로가 체질 , 질의응답 , 구독 뱃지 및 도네 리뉴얼 지원글 확인 , 고멤놀이터 - 드리밍 츄츄 , 시즌 n호 2집 유출 , 2집 내 머리에서 나가!! 노래뱅) </a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4661170" target="_blank">12일</a> - <a href="https://youtu.be/G66gn99M2XU" target="_blank">4시반) VR 풀트 (형의 이세돌들 자식같다는 말 들어서 뭉클 , 갓 성인이 되었을땐 뭐든 마음대로 할 수 있을것 같았다 , 자동차랑 수도는 몰라도 공룡 이름은 안다 ,</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4677060" target="_blank">13일</a> - <a href="" target="_blank">이세돌 마크합방! 별주부전~</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4688796" target="_blank">14일</a> - <a href="" target="_blank">초코먹는날~ (발로란트 , 발렌타인 VRC풀트 , 체리챤 , 노래뱅)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4721489" target="_blank">16일</a> - <a href="" target="_blank">병원에 다녀왔습니다 그런데...</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4785791" target="_blank">20일</a> - <a href="" target="_blank">행복한 일요일 ^//^</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4798375" target="_blank">21일</a> - <a href="" target="_blank">행복한 오후입니다!</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4815259" target="_blank">22일</a> - <a href="" target="_blank">7시) ER 인비테이셔널</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4831774" target="_blank">23일</a> - <a href="" target="_blank">애플 퀄리티</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4866567" target="_blank">25일</a> - <a href="https://youtu.be/1Z8S1LQ4Y_g" target="_blank">지각지각~~~~ (편집자 NTR , 하종 노래뱅)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4880066" target="_blank">26일</a> - 4시) VR 동계올림픽</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4898605" target="_blank">27일</a> - 4시) 엘든링</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4880066" target="_blank">26일</a> - <a href="" target="_blank">4시) VR 동계올림픽</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4898605" target="_blank">27일</a> - <a href="" target="_blank">4시) 엘든링</a></ul>
         
         </ul>
           <p>　</p>
@@ -359,7 +359,7 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/7651967" target="_blank">16일</a> - <a href="https://youtu.be/r3dri1TkFx0" target="_blank">7시) 몸치들의 저스트 댄스 (피아노 , 면허 따 감상 , 면허가리(아빠 차 강탈) , 썸네일가리 , 8월 챤래뱅 플리 , 롤드컵 노래가리 , 고컬로이드 세구세구 , VRChat풀트뱅 , 저스트 댄스 , 노래뱅 4곡)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7679885" target="_blank">17일</a> - <a href="https://youtu.be/LLEk2E0DwVg" target="_blank">고멤가요제!!!! 김피탕화이팅!!!</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7696585" target="_blank">18일</a> - <a href="https://youtu.be/psqd0FKQ4GY" target="_blank">9시반) VRC 조공 선물(?)받기 (VRChat 상황극 조공 - 돚거상사 , VRChat 풀트뱅 , 그냥살아! 촬영맵 탐방 , 맵 조공 - VIICHAN STUDIO , 아바타 조공 - 마린룩,개나리챤,뉴체리,그래피티룩 , 미술관 , MMD월드)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7724268" target="_blank">20일</a> - <a href="https://youtu.be/Gf0gOlyj8us" target="_blank">VRC 풀트랑 싸우는 날 (트루러버 썸네일 시선강탈 , 비챤 관련 고멤가요제 후기방송 클립 모음 , 그냥 살아 라이브 , VRChat 풀트뱅 , 맵탐방 - POP챌린지 맵,그냥살아 맵,Viichan STUDIO 맵 , 왁트세이버 , 감다뒤와 감다살 , 우리 노래 진짜 많다 , 노래뱅)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7724268" target="_blank">20일</a> - <a href="https://youtu.be/EL94fT9j4fs" target="_blank">VRC 풀트랑 싸우는 날 (트루러버 썸네일 시선강탈 , 비챤 관련 고멤가요제 후기방송 클립 모음 , 그냥 살아 라이브 , VRChat 풀트뱅 , 맵탐방 - POP챌린지 맵,그냥살아 맵,Viichan STUDIO 맵 , 왁트세이버 , 감다뒤와 감다살 , 우리 노래 진짜 많다 , 노래뱅)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7727888" target="_blank">21일(업로드x)</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">모닝챤~ (노래뱅)</a></ul> 
        <ul><a href="https://cafe.naver.com/steamindiegame/7736096" target="_blank">21일</a> - <a href="https://youtu.be/HvSYkZFTXJo" target="_blank">수요일 두개재 (유튜브 확장프로그램 써보기 , 설립자 정리 , 매니저 채팅 부검 , 고대챤 클립 , 스플래툰3 , 이상한 소리하지마 변태)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7767617" target="_blank">23일</a> - <a href="https://youtu.be/TkgLZV3A9uk" target="_blank">[7시] 팬덤전쟁 공듀들과 티타임 (•᷅ ʚ •᷄ )// (마린챤 저챗 등장 , 집으로 커피시켜서 5분안에 돌아오기 , 고멤가요제 김피탕&짬뽕 후기 둘러보기 , 그냥 살아! 녹음파일 공개 , 스타크래프트 , 팬덤전쟁 대비 6공주와 티타임 , 빼꼼챤 , 경멸챤 , 뱅종 노래뱅)</a></ul>
