--- a/Viichan.html
+++ b/Viichan.html
@@ -27,7 +27,7 @@
           　 　해당 영상은 다운로드로 넘어가게 되오니 용량에 주의하세요<br>
           　 ◐은 해당 일자 영상이 완전본이 아닌 경우입니다<br>
           　 　리방을 하였을때 앞 방송이나 뒷 방송이 누락되었거나 , 특정 컨텐츠만 녹화한 영상입니다<br>
-          　 　해당 일자 완전본이나 비는 방송 제공해주시면 감사하겠습니다</p><br>
+          　 　해당 일자 완전본이나 비는 방송 제공해주시면 감사하겠습니다<br>
           　◆은 이세돌 분들이 다시보기 채널에 올리신 영상입니다</p></ul>
               
       <p><br></p>
