--- a/Viichan.html
+++ b/Viichan.html
@@ -189,8 +189,8 @@
           <p>　</p>
 
         <ul>3월
-          <ul><a href="https://cafe.naver.com/steamindiegame/4932426" target="_blank">01일</a> - 해피 화요일!!</ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4945742" target="_blank">02일</a> - <a href="https://youtu.be/8hFguFURGEo" target="_blank">4시) 엘든링/(반쪽영상) (이니셜W , 녹음썰 , 고대 유물 외장하드 공개 , 노래뱅 , 엘든링(이 영상엔 없음)</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4932426" target="_blank">01일</a> - <a href="https://youtu.be/T9nw07iFhXg" target="_blank">해피 화요일!! (재채기를 잘 못하는 이유 , 오빠야 애니 , 이세돌 레트로 애니 리와인드 , 투니버스 메들리 최초공개 다시보기 , 양식커버 Square와 Anymore고민 , ㄹㄹㄹ금지 선언 , 월간 비챤 연습 , 이세카이 자매즈 8화,이터널 리턴 대회 만화,비챤 목 지키는 만화, mgram 테스트 , 망냥냥 유출 , 띠드버거 사주세요 , 비챤 덕질하는 친구 , 첫 대선투표 , 로또 , 서브웨이 빵 파달라고~ , 여행은 같이보다 혼자가 좋아 , 나는 왁굳님의 자식 아빠 말 잘 듣자 , 악필입니다 , 그림판 글씨&그림 , 뱅종곡 - 에잇 (어쿠스틱ver))  </ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4945742" target="_blank">02일</a> - <a href="https://youtu.be/rDESLV-Mqsc" target="_blank">4시) 엘든링 (발로란트 팀 소개 영상 , 나도 왁굳형이랑 같은 팀 할래 , 이니셜W , 아잉네 그냥 성악했다 하자! , 버건니,르르땅,뢴트랑 발로란트 한 썰(징퐉스) , 녹음썰 , 고대 유물 외장하드 공개 , 노래뱅 , 엘든링)</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4975255" target="_blank">04일</a> - 벼락치기~~!!</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4989653" target="_blank">05일</a> - 저 왔슴!!!!!!!!!!</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5004934" target="_blank">06일</a> - 짧뱅쓰</ul>
